# QM_2017_SSS_Team5

./: .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  links.md  notes.md  setup.py  test.py
DIIS/: README  diis.py
MP2/: mp2.py  mp2hcl.py  mp2new.py  mp2nh3.py  psi.17958.clean  psi.20343.clean  psi.22805.clean  psi.23689.clean  testmp2.py
SCF_response/: README  scf_response.py
blas_exercise/: D.data  Makefile  README.md  a  matrix.cpp  scf.py
mp2/: __init__.py  math.py
project/: CMakeCache.txt  Makefile  __init__.py  basic_mod.cpp  clean.sh  cmake_install.cmake  diis.py  jk.py  math.py  mp2.py  mp2new.py  mp2new2.py  scf.py  scf_response.py  scf_tools.py
tests/: test_math.py  test_project.py
